// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tools - generate_ts_by_endpoint > should generate snapshot for queryList 1`] = `
"// ========== /access/packageUnit/queryList - GET ==========
export interface TQueryListParams {
  disabled?: boolean; // 
}

export interface TQueryListResponse {
  id?: number; // 代理主键id
  disabled?: boolean; // 禁用状态
  createTime?: string; // 新增时间
  createBy?: string; // 新增人
  updateTime?: string; // 修改时间
  updateBy?: string; // 修改人
  packageUnitCode?: string; // 代码
  packageUnitNameEn?: string; // 英文名称
  packageUnitNameCn?: string; // 中文名称
}"
`;

exports[`tools - generate_ts_by_endpoint > should generate snapshot for queryPackageInfo 1`] = `
"// ========== /access/packageUnit/queryPackageInfo - GET ==========
export interface TQueryPackageInfoParams {
  packageCode: string; // 
  packageName: string; // 
}

export interface TQueryPackageInfoResponse {
  id?: number; // 代理主键id
  disabled?: boolean; // 禁用状态
  createTime?: string; // 新增时间
  createBy?: string; // 新增人
  updateTime?: string; // 修改时间
  updateBy?: string; // 修改人
  packageUnitCode?: string; // 代码
  packageUnitNameEn?: string; // 英文名称
  packageUnitNameCn?: string; // 中文名称
}"
`;

exports[`tools - generate_ts_by_endpoint > should generate snapshot for queryPackageInfos (POST) 1`] = `
"// ========== /access/packageUnit/queryPackageInfos - POST ==========
export interface TQueryPackageInfosParams {
  packageNameEn: string; // 英文名称
  packageCode: string; // 包装单位代码
}

export interface TQueryPackageInfosResponse {
  id?: number; // 代理主键id
  disabled?: boolean; // 禁用状态
  createTime?: string; // 新增时间
  createBy?: string; // 新增人
  updateTime?: string; // 修改时间
  updateBy?: string; // 修改人
  packageUnitCode?: string; // 代码
  packageUnitNameEn?: string; // 英文名称
  packageUnitNameCn?: string; // 中文名称
}"
`;

exports[`tools - generate_ts_by_endpoint > should generate snapshot for roleResource (PUT) 1`] = `
"// ========== /access/resource/update/roleResource - PUT ==========
export interface TRoleResourceParams {
  roleId: number; // 角色id
  resourceIds?: number[]; // 资源id
}

export type TRoleResourceResponse = boolean;"
`;

exports[`tools - generate_ts_by_endpoint > should generate snapshot for validPortDisableStatus (POST) 1`] = `
"// ========== /access/port/validPortDisableStatus - POST ==========
export interface TValidPortDisableStatusParams {
  standardCodes: string[]; // 港口五码code集合
}

export type TValidPortDisableStatusResponse = boolean;"
`;

exports[`tools - get_api_detail > should generate snapshot for endpoint detail 1`] = `
{
  "description": "凯子",
  "method": "GET",
  "operationId": "queryList",
  "parameters": [
    {
      "description": "",
      "in": "query",
      "name": "disabled",
      "required": false,
      "type": "boolean",
    },
  ],
  "path": "/access/packageUnit/queryList",
  "requestBody": null,
  "responses": [
    {
      "description": "OK",
      "status": "200",
    },
  ],
  "summary": "包装单位维护 -根据禁启用状态查询列表（非必填）",
  "tags": [
    "access鉴权-包装单位维护",
  ],
}
`;

exports[`tools - get_api_endpoints > should generate snapshot for endpoints summary 1`] = `
{
  "byMethod": {
    "GET": 2,
    "POST": 2,
    "PUT": 1,
  },
  "endpoints": [
    {
      "method": "POST",
      "path": "/access/packageUnit/queryPackageInfos",
      "summary": "包装单位维护 - 根据多个code和name查询信息",
      "tags": [
        "access鉴权-包装单位维护",
      ],
    },
    {
      "method": "GET",
      "path": "/access/packageUnit/queryPackageInfo",
      "summary": "包装单位维护 - 根据code和name查询信息",
      "tags": [
        "access鉴权-包装单位维护",
      ],
    },
    {
      "method": "GET",
      "path": "/access/packageUnit/queryList",
      "summary": "包装单位维护 -根据禁启用状态查询列表（非必填）",
      "tags": [
        "access鉴权-包装单位维护",
      ],
    },
    {
      "method": "PUT",
      "path": "/access/resource/update/roleResource",
      "summary": "修改角色下对应的权限",
      "tags": [
        "access鉴权-客户端权限资源",
      ],
    },
    {
      "method": "POST",
      "path": "/access/port/validPortDisableStatus",
      "summary": "五码港口 -验证港口信息是否禁用",
      "tags": [
        "access鉴权-五码港口",
      ],
    },
  ],
  "total": 5,
}
`;

exports[`tools - get_schemas > should generate snapshot for schemas 1`] = `
[
  {
    "description": "",
    "name": "包装单位",
    "properties": [
      {
        "description": "代理主键id",
        "format": "int32",
        "name": "id",
        "type": "integer",
      },
      {
        "description": "禁用状态",
        "format": "",
        "name": "disabled",
        "type": "boolean",
      },
      {
        "description": "新增时间",
        "format": "date-time",
        "name": "createTime",
        "type": "string",
      },
      {
        "description": "新增人",
        "format": "",
        "name": "createBy",
        "type": "string",
      },
      {
        "description": "修改时间",
        "format": "date-time",
        "name": "updateTime",
        "type": "string",
      },
      {
        "description": "修改人",
        "format": "",
        "name": "updateBy",
        "type": "string",
      },
      {
        "description": "代码",
        "format": "",
        "name": "packageUnitCode",
        "type": "string",
      },
      {
        "description": "英文名称",
        "format": "",
        "name": "packageUnitNameEn",
        "type": "string",
      },
      {
        "description": "中文名称",
        "format": "",
        "name": "packageUnitNameCn",
        "type": "string",
      },
    ],
    "type": "object",
  },
  {
    "description": "包装单位查询请求体",
    "name": "PackageUnitRequest",
    "properties": [
      {
        "description": "英文名称",
        "format": "",
        "name": "packageNameEn",
        "type": "string",
      },
      {
        "description": "包装单位代码",
        "format": "",
        "name": "packageCode",
        "type": "string",
      },
    ],
    "type": "object",
  },
  {
    "description": "修改角色对应资源的请求头",
    "name": "UpdateRoleResourceRequest",
    "properties": [
      {
        "description": "角色id",
        "format": "int64",
        "name": "roleId",
        "type": "integer",
      },
      {
        "description": "资源id",
        "format": "",
        "name": "resourceIds",
        "type": "array",
      },
    ],
    "type": "object",
  },
  {
    "description": "验证港口状态",
    "name": "ValidPortStatusRequest",
    "properties": [
      {
        "description": "港口五码code集合",
        "format": "",
        "name": "standardCodes",
        "type": "array",
      },
    ],
    "type": "object",
  },
]
`;

exports[`tools - search_apis > should generate snapshot for search results 1`] = `
{
  "results": [
    {
      "method": "POST",
      "path": "/access/packageUnit/queryPackageInfos",
      "summary": "包装单位维护 - 根据多个code和name查询信息",
    },
    {
      "method": "GET",
      "path": "/access/packageUnit/queryPackageInfo",
      "summary": "包装单位维护 - 根据code和name查询信息",
    },
    {
      "method": "GET",
      "path": "/access/packageUnit/queryList",
      "summary": "包装单位维护 -根据禁启用状态查询列表（非必填）",
    },
  ],
  "total": 3,
}
`;
